# job-tracker-GUI-test

./: .gitignore  Additional documentation.adoc  Cargo.toml  README.adoc
src/: app.rs  app_actions.rs  app_defaults.rs  app_export.rs  error.rs  heatmap.rs  lib.rs  main.rs  message.rs  paths.rs  sankey.rs  stats.rs
src/model/: job.rs  mod.rs  status.rs
src/repository/: mapper.rs  mod.rs  schema.rs  sqlite.rs
src/ui/: buttons.rs  calendar.rs  colors.rs  form.rs  heatmap.rs  jobs.rs  mod.rs  month.rs  stats.rs  style.rs
src/ui_state/: animation.rs  calendar.rs  mod.rs  panel.rs
tests/: common.rs  form_calendar_tests.rs  heatmap_tests.rs  repository_tests.rs  sankey_tests.rs  status_stats_tests.rs
