[package]
name = "job_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
directories = "5"
iced = { version = "0.14", features = ["smol"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
